# ftv-sglazh

./: .dockerignore  .gitignore  Dockerfile  README.md  constraints.txt  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml  requirements.txt  wiki.md  ТЗ на FTV-сглаживание.docx
src/ftv_smoothing/: __init__.py  app_core.py  app_server.py  artifacts.py  backend.py  cli.py  config.py  forge3d_visualize.py  io.py  job_store.py  metrics.py  operators.py  pipeline.py  pixel_export.py  postprocess.py  roi_export.py  solver.py  viewer_server.py  visualize.py  webgl_export.py  worker.py
src/ftv_smoothing/app_assets/: app.js  app_presets.js  index.html  styles.css  terrain_viewer.js
src/ftv_smoothing/viewer_assets/: app.js  index.html  styles.css
tests/: test_app_server.py  test_forge3d_visualize.py  test_gpu.py  test_operators.py  test_pipeline.py
